<resources>
    <string name="app_name">RawApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--PRODUTO-->
    <string name="product_title">Titulo do Produto</string>
    <string name="produto_info">INFO DO PRODUTO</string>
    <string name="info_produto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="avaliations">AVALIAÇÕES ></string>
    <string name="number">22K</string>

    <string name="fabricante">FABRICANTE</string>
    <string name="nome_fabricante">Nome do Fabricante</string>
    <string name="fabricante_detalhes">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>

    <string name="detalhes">DETALHES</string>
    <string name="produto_detalhes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="fotos">FOTOS</string>
    <string name="qtd_fotos">5+</string>

    <!-- HOME PAGE DISCOVER -->
    <string name="home_title">DESCOBRIR</string>
    <string name="lojas_title">LOJAS</string>
    <string name="lojas_sub_title">Lojas próximas de você</string>
    <string name="produtos_tendencia_title">PRODUTOS EM TENDENCIA</string>
    <string name="produtos_tendencia_sub_title">Veja os produtos com mais avaliações recentemente</string>
    <string name="produtos_top_title">PRODUTOS MAIS BEM AVALIADOS</string>
    <string name="produtos_top_sub_title">Veja os produtos melhor avaliados</string>
    <string name="produtos_todos_title">TODOS OS PRODUTOS</string>
    <string name="produtos_todos_sub_title">Veja a lista com todos os produtos cadastrados</string>
    <string name="meu_perfil">MEU PERFIL</string>

    <!-- LOGIN -->
    <string name="login_registered">Você já tem uma conta?</string>
    <string name="register_title">Crie sua conta</string>
    <string name="register_terms">Ao criar sua conta, você está concordando com nossos <u>Termos de uso</u> e <u>Política de Privacidade</u></string>
    <string name="forgot_instructions">Preencha seu email e envie. Em segundos você receberá um link de recuperação de senha.</string>
    <string name="teste_pelo_editor">VALOR DO EDITOR</string>
    <string name="hint_matricula">Matrícula</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">ENTRAR</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="txt_new_user"><u>Novo usuário? Crie uma conta</u></string>
    <string name="txt_forgot_password">Equeceu a Senha?</string>
    <string name="tx_forgot_password_title">Recupere sua senha</string>
    <string name="btn_forgot">ENVIAR</string>
    <string name="btn_requisicoes">REQUISITAR</string>
    <string name="hint_repeat_password">Repita a senha</string>

    <!--PROFILE-->
    <string name="my_profile">MEU PERFIL</string>
    <string name="who_iam">Quem sou eu?</string>
    <string name="email">Email</string>
    <string name="quit">SAIR</string>
    <string name="reviews">MINHAS REVIEWS</string>
    <string name="editarPerfil">ATUALIZAR PERFIL</string>

    <!--CREATE-->
    <string name="create_review_title">CRIAR UMA AVALIAÇÃO</string>
    <string name="comment_title">COMENTÁRIO:</string>
    <string name="pros_title">PROS</string>
    <string name="contras_title">CONTRAS</string>
    <string name="rating_qualidade">QUALIDADE</string>
    <string name="rating_usabilidade">USABILIDADE</string>
    <string name="rating_custo">CUSTO</string>
    <string name="criar_button">CRIAR</string>

</resources>
