<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="nossaHomeFragment"
            type="com.rawenterprises.rawapp.ui.fragment.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.HomeFragment">

        <TextView
            android:id="@+id/tvDescobrir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/home_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputProduto"
            android:layout_width="325dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Pesquise o produto"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescobrir" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inputProduto"
            app:layout_constraintTop_toBottomOf="@+id/tvDescobrir"
            app:srcCompat="@drawable/ic_baseline_search_24" />

        <TextView
            android:id="@+id/tvLojas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/lojas_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputProduto" />

        <ImageView
            android:id="@+id/ivArrowRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputProduto"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        <TextView
            android:id="@+id/tvLojasDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/lojas_sub_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLojas" />

        <TextView
            android:id="@+id/tvTendencias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/produtos_tendencia_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLojasDesc" />

        <ImageView
            android:id="@+id/ivArrowRight1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLojasDesc"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        <TextView
            android:id="@+id/tvTendenciasDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/produtos_tendencia_sub_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTendencias" />

        <TextView
            android:id="@+id/tvTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/produtos_top_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTendenciasDesc" />

        <ImageView
            android:id="@+id/ivArrowRight3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTendenciasDesc"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        <TextView
            android:id="@+id/tvTopDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/produtos_top_sub_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTop" />

        <Button
            android:id="@+id/btMeuPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/meu_perfil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTopDesc" />

        <TextView
            android:id="@+id/tvTop2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:text="@string/produtos_todos_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTendenciasDesc" />

        <TextView
            android:id="@+id/tvTopDesc2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/produtos_todos_sub_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/ivArrowRight3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTop2" />

        <ImageView
            android:id="@+id/ivArrowTodosOsProdutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivArrowRight3"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
