<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ProductInfoFragment"
            type="com.rawenterprises.rawapp.ui.fragment.ProductInfoFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.ProductInfoFragment">

        <ImageView
            android:id="@+id/ivProdutoImagem"
            android:layout_width="85dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvProdutoTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivProdutoImagem"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/product_title" />

        <TextView
            android:id="@+id/tvProdutoInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/info_produto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toEndOf="@+id/ivProdutoImagem"
            app:layout_constraintTop_toBottomOf="@+id/tvProdutoTitulo" />

        <TextView
            android:id="@+id/tvAvaliacoesTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="280dp"
            android:text="@string/avaliations"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProdutoImagem" />

        <TextView
            android:id="@+id/tvAvaliacoesQtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/number"
            app:layout_constraintStart_toEndOf="@+id/tvAvaliacoesTitulo"
            app:layout_constraintTop_toBottomOf="@+id/ivProdutoImagem" />

        <TextView
            android:id="@+id/tvFabricanteTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAvaliacoesTitulo"
            tools:text="@string/fabricante" />

        <TextView
            android:id="@+id/tvFabricanteNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivFabricanteImagem"
            app:layout_constraintTop_toBottomOf="@+id/tvFabricanteTitulo"
            tools:text="@string/nome_fabricante" />

        <TextView
            android:id="@+id/tvFabricanteInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/fabricante_detalhes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toEndOf="@+id/ivFabricanteImagem"
            app:layout_constraintTop_toBottomOf="@+id/tvFabricanteNome" />

        <TextView
            android:id="@+id/tvDetalhesTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFabricanteInfo"
            tools:text="@string/detalhes" />

        <TextView
            android:id="@+id/tvDetalhesProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/produto_detalhes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetalhesTitulo" />

        <TextView
            android:id="@+id/tvFotosTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btTag"
            tools:text="@string/fotos" />

        <ImageView
            android:id="@+id/ivFabricanteImagem"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFabricanteTitulo"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivProdutoPessoasImagem"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFotosTitulo"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivProdutoPessoasImagem2"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/ivProdutoPessoasImagem"
            app:layout_constraintTop_toBottomOf="@+id/tvFotosTitulo"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivProdutoPessoasImagem3"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/ivProdutoPessoasImagem2"
            app:layout_constraintTop_toBottomOf="@+id/tvFotosTitulo"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivProdutoPessoasImagem4"
            android:layout_width="63dp"
            android:layout_height="68dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/ivProdutoPessoasImagem3"
            app:layout_constraintTop_toBottomOf="@+id/tvFotosTitulo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvProdutoPessoaImagesQtd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/qtd_fotos"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivProdutoPessoasImagem4"
            app:layout_constraintTop_toBottomOf="@+id/tvFotosTitulo"
            app:layout_constraintVertical_bias="0.341" />

        <Button
            android:id="@+id/btTag"
            android:layout_width="59dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="hot"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetalhesProduto" />

        <ImageView
            android:id="@+id/ivArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

